[package]
name = "palm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.32"
simplelog = "0.12"
log = "0.4"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "net",
    "macros",
    "time",
    "sync",
] }
winit = "0.30.12"
anyhow = "1.0.99"
atomic_enum = "0.3.0"
hex = "0.4.3"
regex = "1.11.2"
chrono = "0.4.42"
